--- a/uc-check.html
+++ b/uc-check.html
@@ -6,17 +6,21 @@
 # Based on information on https://www.gov.uk/universal-credit/eligibility  #
 # as at 20 October 2017. That information could be clearer than it is.     #
 #                                                                          #
-# Made by simon gray, of Birmingham City Council, released under GPL-3.0   #
+# Made by simon.gray@birmingham.gov.uk of Birmingham City Council,         #
+# released under GPL-3.0                                                   #
 #                                                                          #
 # I've prioritised readability over optimisation; there may be a better    #
-# way to either make it more readable and/or more optimal.                 #
+# way to either make it more readable and/or more optimal. It's of course  #
+# a bare HTML/JavaScript rendition, you will style accordingly for your    #
+# own site's look and feel.                                                #
 #                                                                          #
 # Latest source always available at                                        #
 # https://github.com/star-one/Universal-Credit-eligibility-checker         #
 #                                                                          #
 # Feel free to use and change as you see fit, but please credit myself     #
 # and Birmingham City Council and provide the GitHub link above as a       #
-# if you do in a comment like this. It's the polite thing to do.           #
+# if you do in a comment like this. It's the polite thing to do. And it's  #
+# always nice to be told if other people are using it.                     #
 ############################################################################
 -->
 <style>
