Another minor update

--- a/uc-check.html
+++ b/uc-check.html
@@ -60,11 +60,11 @@ function eligibility(question, answer)
 					case "B376":
 					case "B620":
 						serviceArea = "Full";
-						savings = "£16,000";
+						savings = "&pound;16,000";
 						break;
 					default:
 						serviceArea = "Live";
-						savings = "£6,000";
+						savings = "&pound;6,000";
 				}
 				document.getElementById("savings").innerHTML = savings;
 				document.getElementById("q4").className = "shown";
