--- a/uc-check.html
+++ b/uc-check.html
@@ -17,10 +17,10 @@
 # Latest source always available at                                        #
 # https://github.com/star-one/Universal-Credit-eligibility-checker         #
 #                                                                          #
-# Feel free to use and change as you see fit, but please credit myself     #
-# and Birmingham City Council and provide the GitHub link above as a       #
-# if you do in a comment like this. It's the polite thing to do. And it's  #
-# always nice to be told if other people are using it.                     #
+# Feel free to use and change as you see fit, but if you do please credit  #
+# myself and Birmingham City Council and provide the GitHub link above     #
+# in a comment like this. It's the polite thing to do. And it's always     #
+# nice to be told if other people are using it.                            #
 ############################################################################
 -->
 <style>
@@ -34,7 +34,6 @@
 <script>
 eligibilityFlag = "";
 serviceArea = "";
-age1618 = "";
 savings = "";
 lastAnswered = 0;
 function eligibility(question, answer)
