--- a/uc-check.html
+++ b/uc-check.html
@@ -265,3 +265,6 @@ function eligibility(question, answer)
 
 </ul>
 <div id="eligibility"></div>
+<div id="disclaimer">
+This guidance is taken from information on <a href="https://www.gov.uk/universal-credit/eligibility" title="Universal Credit on www.gov.uk">https://www.gov.uk/universal-credit/eligibility</a> as at 20 October 2017. If in doubt, please refer to your local Job Centre.
+</div>
