--- a/uc-check.html
+++ b/uc-check.html
@@ -140,13 +140,13 @@ function eligibility(question, answer)
 	switch(eligibilityFlag)
 	{
 		case "UC":
-			theEligibility = "You should apply for Universal Credit and Council Tax Support.";
+			theEligibility = "<strong>You should apply for Universal Credit and Council Tax Support.</strong>";
 			break;
 		case "HB":
-			theEligibility = "You should apply for Housing Benefit and Council Tax Support.";
+			theEligibility = "<strong>You should apply for Housing Benefit and Council Tax Support.</strong>";
 			break;
 		case "DWP":
-			theEligibility = "You'll need to discuss your circumstances with your Job Centre for further advice.";
+			theEligibility = "<strong>You'll need to discuss your circumstances with your Job Centre for further advice.</strong>";
 			break;
 		default:
 			theEligibility = "";
@@ -158,13 +158,13 @@ function eligibility(question, answer)
 <p>Please tell us about your circumstances:</p>
 <ul>
 <li id="q0" class="shown">Are you aged 16-18? <select onChange="eligibility(0, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q1" class="hidden">Are you single or living in a relationship? <select onChange="eligibility(1, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Single">Single</option>
 <option value="Relationship">In a relationship</option>
 </select></li>
@@ -180,85 +180,85 @@ function eligibility(question, answer)
 </li>
 
 <li id="q4" class="hidden">Are you aged between 18 and the State Pension Age (<a href="https://www.gov.uk/state-pension-age/y/age" title="Check your State Pension Age" target="checkSPA">Check</a>) <select onChange="eligibility(4, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q5" class="hidden">Do you have savings of <strong>more than</strong> <span id="savings"></span>? <select onChange="eligibility(5, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q6" class="hidden">Are you on a low income or unemployed? <select onChange="eligibility(6, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q7" class="hidden">Are you self-employed? <select onChange="eligibility(7, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q8" class="hidden">Are you doing an apprenticeship? <select onChange="eligibility(8, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q9" class="hidden">Are you in full time education or training? <select onChange="eligibility(9, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q10" class="hidden">Do you expect to earn more than £338 in the next month? <select onChange="eligibility(10, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q11" class="hidden">Are you able to work or look for work? <select onChange="eligibility(11, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q12" class="hidden">Are you a British Citizen? <select onChange="eligibility(12, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q13" class="hidden">Are you a homeowner? <select onChange="eligibility(13, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q14" class="hidden">Are you homeless? <select onChange="eligibility(14, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q15" class="hidden">Are you a carer or foster carer? <select onChange="eligibility(15, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q16" class="hidden">Are you pregnant or had a baby within the last 15 weeks? <select onChange="eligibility(16, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
 
 <li id="q17" class="hidden">Are you liable to pay child maintenance? <select onChange="eligibility(17, this.value)">
-<option value="">--- Please select ---</option>
+<option value=""> Please select </option>
 <option value="Yes">Yes</option>
 <option value="No">No</option>
 </select></li>
@@ -266,5 +266,5 @@ function eligibility(question, answer)
 </ul>
 <div id="eligibility"></div>
 <div id="disclaimer">
-This guidance is taken from information on <a href="https://www.gov.uk/universal-credit/eligibility" title="Universal Credit on www.gov.uk">https://www.gov.uk/universal-credit/eligibility</a> as at 20 October 2017. If in doubt, please refer to your local Job Centre.
+<p><em>This guidance is taken from information on <a href="https://www.gov.uk/universal-credit/eligibility" title="Universal Credit on www.gov.uk">https://www.gov.uk/universal-credit/eligibility</a> as at 20 October 2017. If in doubt, please refer to your local Job Centre.</em></p>
 </div>
